--- a/geetolsdk/src/main/res/drawable/gt_btn.xml
+++ b/geetolsdk/src/main/res/drawable/gt_btn.xml
@@ -3,13 +3,13 @@
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
             <corners android:radius="10dp" />
-            <solid android:color="@color/gt_main_color" />
+            <solid android:color="@color/main_Color" />
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <corners android:radius="10dp" />
-            <solid android:color="@color/gt_main_color" />
+            <solid android:color="@color/main_Color" />
         </shape>
     </item>
 </selector>
